# fresher

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION_OXC_TO_INTY.md  PLAN.md  README.md  flake.nix  package-lock.json  package.json  sessions.json
.github/workflows/: build.yml  release.yml  sync-upstream.yml  theme-screenshots.yml  winget-publish.yml
.tui-agent-state/: AGENT_INSTRUCTIONS.md  confirmed_bugs.md  github_issues.md  learning_db.md  potential_improvements.md  run_log.md  session_log.md  test_plan.md
crates/fresh-core/: Cargo.toml
crates/fresh-editor/: Cargo.toml  build.rs  config.example.json
crates/fresh-gui/: Cargo.toml
crates/fresh-parser-js/: Cargo.toml
crates/fresh-parser-js/src/: lib.rs
crates/fresh-plugin-runtime/: Cargo.toml
debian/: changelog
docs/: index.md  theme-screenshot-diff.md
docs/.vitepress/: config.ts
docs/blog/: index.md
docs/configuration/: index.md  init.md
docs/features/: dashboard.md  devcontainer.md  file-explorer.md  git.md  index.md  lsp.md  session-persistence.md  ssh.md  terminal.md
docs/internal/: AUTHORITY_DESIGN.md  EKS_WORKSPACE_UX_DESIGN.md  LSP_HEURISTIC_EVAL_REMEDIATION.md  PER_SESSION_BACKENDS_DESIGN.md  PLAN-orchestrator-session-persistence-tests.md  README.md  REVIEW_DIFF_NNG_USABILITY_EVAL.md  TERMINOLOGY.md  UNIFIED_SCENE_DESIGN.md  conductor-sessions-design.md  e2e-test-migration-design.md  language-support-review.md  large-file-highlight-test-discrepancy.md  package-loader-plan.md  (+11 more)
homepage/: index.html
scripts/: fresher-update  generate-theme-diff.sh
web-ui/: README.md  index.html
(+466 files in other folders)
